deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  labels:
    name: mydeployment
spec:
  replicas: 5
  selector:
    matchLabels:
      server: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        server: nginx
    spec:
      containers:
      - name: nginxcontainer
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
