pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: mypod
    type: proxy
spec:
  containers:
  - name: nginxcontainer
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
