service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websrc
spec:
  selector:
    server: web
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
